# ObjXMPP

./: .gitignore  .hgignore  Doxyfile  Info.plist  Makefile  ObjXMPP.oc  XMPPConnection.h  XMPPConnection.m  XMPPStanza.h  XMPPStanza.m  configure.ac  extra.mk.in  test.m
ObjXMPP.xcodeproj/: project.pbxproj
src/: Info.plist.in  Makefile  ObjXMPP.h  XMPPANONYMOUSAuth.h  XMPPANONYMOUSAuth.m  XMPPAuthenticator.h  XMPPAuthenticator.m  XMPPCallback.h  XMPPCallback.m  XMPPConnection.h  XMPPConnection.m  XMPPContact+Private.h  XMPPContact.h  XMPPContact.m  XMPPContactManager.h  XMPPContactManager.m  XMPPDiscoEntity.h  XMPPDiscoEntity.m  XMPPDiscoIdentity.h  XMPPDiscoIdentity.m  XMPPDiscoNode+Private.h  XMPPDiscoNode.h  XMPPDiscoNode.m  XMPPEXTERNALAuth.h  XMPPEXTERNALAuth.m  XMPPExceptions.h  XMPPExceptions.m  XMPPFileStorage.h  XMPPFileStorage.m  XMPPIQ.h  XMPPIQ.m  XMPPJID.h  XMPPJID.m  XMPPJSONFileStorage.h  XMPPJSONFileStorage.m  XMPPMessage.h  XMPPMessage.m  XMPPMulticastDelegate.h  XMPPMulticastDelegate.m  XMPPPLAINAuth.h  (+24 more)
tests/: Makefile  test.m
